Creation of Web Services Product-Category

--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,1 +1,6 @@
 server.port=80
+
+#DataBase
+spring.datasource.url=jdbc:postgresql://localhost:5432/Market-app
+spring.datasource.username=postgress
+spring.datasource.password=Cuenca1234.
