--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 server.port=8090
 
 #DataBase
-spring.datasource.url=jdbc:postgresql://localhost:5432/Market-app
-spring.datasource.username=user_admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/Market-Application
+spring.datasource.username=postgres
 spring.datasource.password=Cuenca1234.
