--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,6 +1,6 @@
-server.port=80
+server.port=${PORT}
 
 #DataBase
-spring.datasource.url=jdbc:postgresql://localhost:5432/Market-app
-spring.datasource.username=postgress
-spring.datasource.password=Cuenca1234.
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
